# book-reader

./: Cargo.toml  README.md
src/: main.rs  routes.rs
src/handlers/: mod.rs  parse.rs  upload.rs
src/static/: index.html  script.js  styles.css
