[package]
name = "ebook_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6.0"
actix-multipart = "0.4.0"
futures-util = "0.3"
epub = "2.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dependencies.actix-rt]
version = "2.5.0"
